--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="cctv_mode">CCTV 모드</string>
 
     <string name="need_permission">앱을 사용하기 위해 권한이 필요합니다. 확인 버튼을 누르면 설정화면으로 이동합니다.</string>
+    <string name="input_new_pw">새 비밀번호를 입력해 주세요</string>
+    <string name="pw_changed">비밀번호가 변경되었습니다</string>
 
 </resources>
